# AFIT-CSCE689-HW1-S

./: .gitignore  README  configure.ac
include/: Admin.h  FileDesc.h  TCPClient.h  TCPConn.h  TCPServer.h  strfuncts.h
src/: Admin.cpp  FileDesc.cpp  Makefile.am  TCPClient.cpp  TCPConn.cpp  TCPServer.cpp  admin_main.cpp  strfuncts.cpp
