bin_PROGRAMS = tcpserver tcpclient tcpadmin


tcpserver_SOURCES = server_main.cpp Server.cpp TCPServer.cpp strfuncts.cpp FileDesc.cpp TCPConn.cpp
tcpserver_LDFLAGS = -Wall
# tcpserver_LDFLAGS = -largon2

tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp FileDesc.cpp TCPConn.cpp
tcpclient_LDFLAGS = -Wall

tcpadmin_SOURCES = admin_main.cpp Admin.cpp
tcpadmin_LDFLAGS = -Wall
# tcpadmin_LDFLAGS = -largon2

# For homework 2
# my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
# my_adduser_LDFLAGS = -largon2
