bin_PROGRAMS = tcpserver tcpclient my_adduser


tcpserver_SOURCES = server_main.cpp Server.cpp TCPServer.cpp strfuncts.cpp FileDesc.cpp TCPConn.cpp Admin.cpp
tcpserver_LDFLAGS = -Wall
# tcpserver_LDFLAGS = -largon2

tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp FileDesc.cpp TCPConn.cpp Admin.cpp
tcpclient_LDFLAGS = -Wall

my_adduser_SOURCES = admin_main.cpp Admin.cpp
my_adduser_LDFLAGS = -Wall
# tcpadmin_LDFLAGS = -largon2

# For homework 2
# my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
# my_adduser_LDFLAGS = -largon2
